# green

./: .env.example  .gitignore  Dockerfile  README.md  build-release.sh  compose.yml  default_config.json.example  default_keys.txt.example  docker-entrypoint.sh  release.sh  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/green/android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/swiss/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/green/android/: BootReceiver.kt  GeoUpdater.kt  GreenVpnService.kt  MainActivity.kt  TProxyService.kt  VpnApp.kt  VpnConfigHelper.kt  VpnViewModel.kt
app/src/main/java/com/green/android/data/: AppDatabase.kt  Config.kt  ConfigDao.kt  Subscription.kt  SubscriptionDao.kt
app/src/main/java/com/green/android/ui/components/: AppPickerDialog.kt  SharedComponents.kt  UpdateBanners.kt
app/src/main/java/com/green/android/ui/screens/: ConnectedLayer.kt  DisguiseSettingsScreen.kt  EditServerScreen.kt  GeoSettingsScreen.kt  HomeScreen.kt  ImportScreen.kt  SettingsScreen.kt  SubscriptionsScreen.kt
app/src/main/java/com/green/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/swiss/android/: BootReceiver.kt  GeoUpdater.kt  MainActivity.kt  SwissVpnService.kt  TProxyService.kt  VpnApp.kt  VpnConfigHelper.kt  VpnViewModel.kt
app/src/main/java/com/swiss/android/data/: AppDatabase.kt  Config.kt  ConfigDao.kt  Subscription.kt  SubscriptionDao.kt
app/src/main/java/com/swiss/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_calculator_bg.xml  ic_calculator_fg.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_calculator.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/green/android/: ExampleUnitTest.kt
app/src/test/java/com/swiss/android/: ExampleUnitTest.kt
design_handoff_smol_vpn/: README.md  app.jsx  icons.jsx  index.html  panels.jsx  styles.css
design_handoff_smol_vpn/logo/: README.md
docs/: architecture.md  ci-setup.md  overview.md  poc-plan.md
go/: go.mod  go.sum  imports.go  libgreen.go  libswiss.go
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
